# sample-weight-audit-nondet

./: Check_three_equivalences_classifier.ipynb  Check_three_equivalences_regressor.ipynb  Check_three_equivalences_transformer.ipynb  README.md  pyproject.toml  test_on_representative_sample.py
.github/workflows/: test.yml
reports/: sklearn_estimators_sample_weight_audit_investigative_plots.ipynb  sklearn_estimators_sample_weight_audit_report.ipynb  sklearn_estimators_sample_weight_scaling_audit_report.ipynb
sample_weight_audit/: __init__.py  est_non_deterministic_config.py  experimental_tests.py  generate_weighted_and_repeated_data.py  multifit.py  test_on_representative_sample.py
src/: Check_pval_tests.ipynb  Check_three_equivalences_classifier.ipynb  Check_three_equivalences_regressor.ipynb  Check_three_equivalences_transformer.ipynb
src/sample_weight_audit/: __init__.py  data.py  est_non_deterministic_config.py  estimator_check.py  estimator_params.py  exceptions.py  experimental_tests.py  generate_weighted_and_repeated_data.py  multifit.py  pval_tests.py  sklearn_stochastic_params.py  statistical_testing.py  test_on_representative_sample.py
src/tests/: test_data.py  test_estimators.py  test_statistical_testing.py
