[build-system]
requires = ["setuptools >= 61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "sample-weight-audit-nondet"
version = "2025.1.0"
description = "Auditing tool for sample weight equivalence for non-deterministic estimators"
readme = "README.md"
maintainers = [{name = "Shruti Nath", email = "shruti@probabl.ai"}]
dependencies = ["numpy>=1.22","scikit-learn>=1.4"]
requires-python = ">=3.9"

[project.urls]
repository = "https://github.com/snath-xoc/sample-weight-audit-nondet.git"
download = "https://test.pypi.org/project/sample-weight-audit/2025.0.0/"
tracker = "https://github.com/snath-xoc/sample-weight-audit-nondet/issues"
